--- a/finance_dashboard.html
+++ b/finance_dashboard.html
@@ -38,6 +38,12 @@
     .buy-box { border-left: 6px solid var(--ok); }
     .wait-box { border-left: 6px solid var(--warn); }
     .dont-box { border-left: 6px solid #ff6b6b; }
+    .semaforo-row { margin: 10px 0 14px; }
+    .semaforo-label { font-size: .9rem; margin-bottom: 6px; color: #dce5ff; }
+    .semaforo-track { display:flex; width:100%; height:22px; border-radius:999px; overflow:hidden; border:1px solid #2a396f; }
+    .seg-green { background:#26c76f; width:33.3%; display:flex; align-items:center; justify-content:center; color:#062613; font-weight:700; font-size:.78rem; }
+    .seg-yellow { background:#ffcc33; width:33.3%; display:flex; align-items:center; justify-content:center; color:#3d2d00; font-weight:700; font-size:.78rem; }
+    .seg-red { background:#ff4d4f; width:33.4%; display:flex; align-items:center; justify-content:center; color:#3b0405; font-weight:700; font-size:.78rem; }
     .kpi { font-size: 1.5rem; font-weight: 700; margin-top: 8px; }
     .small { font-size: .92rem; }
     table { width: 100%; border-collapse: collapse; font-size: .92rem; }
@@ -128,9 +134,35 @@
 
   <div class="grid two" style="margin-top:16px;">
     <div class="card">
-      <h3>Semáforo FIIs (Regra de Preço)</h3>
-      <div class="small muted">Para decidir compra agora: compare o P/VP atual de cada FII com a faixa.</div>
-      <canvas id="fiiChart" height="220" style="margin-top:10px;"></canvas>
+      <h3>Semáforo FIIs (Regra de Preço) — Horizontal</h3>
+      <div class="small muted">Sempre com as 3 cores visíveis (inclusive vermelho), para decisão rápida.</div>
+
+      <div class="semaforo-row">
+        <div class="semaforo-label">Tijolo: BRCO11, HGLG11, VILG11, XPLG11, BTLG11, HGRU11, KNRI11</div>
+        <div class="semaforo-track">
+          <div class="seg-green">🟢 ≤ 0,95</div>
+          <div class="seg-yellow">🟡 0,95–1,05</div>
+          <div class="seg-red">🔴 &gt; 1,05</div>
+        </div>
+      </div>
+
+      <div class="semaforo-row">
+        <div class="semaforo-label">Papel/High Yield: IRIM11, RZTR11, KNCA11, KDIF11, CPTS11, MXRF11</div>
+        <div class="semaforo-track">
+          <div class="seg-green">🟢 ≤ 0,90</div>
+          <div class="seg-yellow">🟡 0,90–1,00</div>
+          <div class="seg-red">🔴 &gt; 1,00</div>
+        </div>
+      </div>
+
+      <div class="semaforo-row">
+        <div class="semaforo-label">Shoppings: HGBS11, VISC11</div>
+        <div class="semaforo-track">
+          <div class="seg-green">🟢 ≤ 0,90</div>
+          <div class="seg-yellow">🟡 0,90–1,00</div>
+          <div class="seg-red">🔴 &gt; 1,00</div>
+        </div>
+      </div>
     </div>
     <div class="card">
       <h3>O que comprar agora (regra objetiva)</h3>
@@ -199,28 +231,7 @@
       }
     });
 
-    const fiiCtx = document.getElementById('fiiChart');
-    const labels = ['IRIM11','RZTR11','KNCA11','BRCO11','HGLG11','VILG11','XPLG11','BTLG11','HGRU11','HGBS11','VISC11','KNRI11','KDIF11','CPTS11','MXRF11'];
-    new Chart(fiiCtx, {
-      type: 'bar',
-      data: {
-        labels,
-        datasets: [
-          { label: '🟢 Faixa Verde (máx P/VP)', data: [0.90,0.90,0.90,0.95,0.95,0.95,0.95,0.95,0.95,0.90,0.90,0.95,0.90,0.90,0.90], backgroundColor: '#35d07f' },
-          { label: '🟡 Limite Amarelo (máx P/VP)', data: [1.00,1.00,1.00,1.05,1.05,1.05,1.05,1.05,1.05,1.00,1.00,1.05,1.00,1.00,1.00], backgroundColor: '#ffcc66' }
-        ]
-      },
-      options: {
-        scales: {
-          x: { ticks: { color: '#dce5ff', maxRotation: 70, minRotation: 45 } },
-          y: { ticks: { color: '#dce5ff' }, beginAtZero: false, min: 0.8, max: 1.1 }
-        },
-        plugins: {
-          legend: { labels: { color: '#e8ecff' } },
-          title: { display: true, text: 'Use o P/VP atual e compare com as faixas', color: '#9aa7d8' }
-        }
-      }
-    });
+
   </script>
 </body>
 </html>
