Use requested Status Invest URLs and improve horizontal chart layout/grid

--- a/finance_dashboard.html
+++ b/finance_dashboard.html
@@ -90,8 +90,8 @@
   <div class="grid two" style="margin-top:16px;">
     <div class="card">
       <h3>Alocação por bloco (barras horizontais)</h3>
-      <div style="max-width:260px; margin:0 auto;">
-        <canvas id="allocChart" height="180"></canvas>
+      <div style="max-width:520px; margin:0;">
+        <canvas id="allocChart" height="260"></canvas>
       </div>
       <div class="small muted" style="text-align:center; margin-top:8px;">Visual em barras para leitura mais clara</div>
     </div>
@@ -144,7 +144,7 @@
     <div class="small muted">Preencha apenas o P/VP atual de cada FII. O dashboard responde sozinho: COMPRAR FORTE, COMPRAR NORMAL ou EVITAR.</div>
     <div style="margin-top:8px; display:flex; gap:8px; align-items:center;">
       <button id="autoPvpBtn" style="padding:7px 12px; border-radius:8px; border:1px solid #3552a3; background:#1a2a57; color:#e8ecff; cursor:pointer;">Atualizar P/VP automático</button>
-      <span id="autoPvpStatus" class="small muted">Fonte: Funds Explorer (via proxy de leitura)</span>
+      <span id="autoPvpStatus" class="small muted">Fonte: Funds Explorer + Status Invest (via proxy de leitura)</span>
     </div>
     <table style="margin-top:8px;">
       <thead><tr><th>FII</th><th>P/VP atual</th><th>Decisão</th><th>Motivo</th></tr></thead>
@@ -157,7 +157,7 @@
     <div class="small muted">Mesma lógica objetiva: sem cálculo manual. Clique no botão e veja o sinal.</div>
     <div style="margin-top:8px; display:flex; gap:8px; align-items:center;">
       <button id="autoPlBtn" style="padding:7px 12px; border-radius:8px; border:1px solid #3552a3; background:#1a2a57; color:#e8ecff; cursor:pointer;">Atualizar P/L automático</button>
-      <span id="autoPlStatus" class="small muted">Fonte: Status Invest/Fundamentus (via proxy de leitura)</span>
+      <span id="autoPlStatus" class="small muted">Fonte: Status Invest (ações + ETF EUA, via proxy de leitura)</span>
     </div>
     <table style="margin-top:8px;">
       <thead><tr><th>Ativo</th><th>P/L atual</th><th>Decisão</th><th>Motivo</th></tr></thead>
@@ -198,7 +198,19 @@
       },
       options: {
         indexAxis: 'y',
-        scales: { x: { ticks: { color: '#dce5ff' } }, y: { ticks: { color: '#dce5ff' } } },
+        scales: {
+          x: {
+            ticks: { color: '#dce5ff' },
+            grid: { color: 'rgba(120,150,220,.28)' },
+            border: { color: 'rgba(120,150,220,.45)' }
+          },
+          y: {
+            ticks: { color: '#dce5ff' },
+            grid: { color: 'rgba(120,150,220,.18)' },
+            border: { color: 'rgba(120,150,220,.45)' }
+          }
+        },
+        datasets: { bar: { barPercentage: 0.72, categoryPercentage: 0.86 } },
         plugins: { legend: { labels: { color: '#e8ecff' } } }
       }
     });
@@ -224,7 +236,10 @@
     const tbody = document.getElementById('fiiDecisionBody');
 
     async function fetchPvpFromWeb(ticker) {
-      const url = `https://r.jina.ai/http://www.fundsexplorer.com.br/funds/${ticker}`;
+      const lower = ticker.toLowerCase();
+      const url = ticker === 'KDIF11'
+        ? `https://r.jina.ai/http://statusinvest.com.br/fiinfras/${lower}`
+        : `https://r.jina.ai/http://www.fundsexplorer.com.br/funds/${ticker}`;
       const res = await fetch(url);
       if (!res.ok) throw new Error('falha no fetch');
       const txt = await res.text();
@@ -296,21 +311,24 @@
     const stockBody = document.getElementById('stockDecisionBody');
 
     async function fetchPLFromWeb(ticker) {
-      const urls = [
-        `https://r.jina.ai/http://statusinvest.com.br/acoes/${ticker.toLowerCase()}`,
-        `https://r.jina.ai/http://www.fundamentus.com.br/detalhes.php?papel=${ticker}`
-      ];
+      const isEtfUs = ticker === 'IVV' || ticker === 'SCHD';
+      const urls = isEtfUs
+        ? [`https://r.jina.ai/http://statusinvest.com.br/etf/eua/${ticker.toLowerCase()}`]
+        : [`https://r.jina.ai/http://statusinvest.com.br/acoes/${ticker.toLowerCase()}`];
+
       for (const url of urls) {
         try {
           const res = await fetch(url);
           if (!res.ok) continue;
           const txt = await res.text();
+          // Para ações: P/L. Para ETF EUA: usar P/L quando existir, senão P/VP.
           let m = txt.match(/P\/L\s*([0-9]+,[0-9]+)/i) || txt.match(/P\/L[^0-9]*([0-9]+,[0-9]+)/i);
           if (!m) m = txt.match(/P\/L\s*([0-9]+\.[0-9]+)/i);
+          if (!m) m = txt.match(/P\/VP\s*([0-9]+,[0-9]+)/i) || txt.match(/P\/VP[^0-9]*([0-9]+,[0-9]+)/i);
           if (m) return Number(String(m[1]).replace(',', '.'));
         } catch (_) {}
       }
-      throw new Error('P/L não encontrado');
+      throw new Error('Múltiplo não encontrado');
     }
 
     Object.entries(stockRules).forEach(([ticker, rule]) => {
